components/ui/editor-entity/src/main/resources/META-INF/dirigible/editor-entity/css/styles.css
/**
 * Copyright (c) 2010-2026 Eclipse Dirigible contributors
 *
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v2.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v20.html
 *
 * SPDX-FileCopyrightText: Eclipse Dirigible contributors
 * SPDX-License-Identifier: EPL-2.0
 */
:root {
  --font_color: #303030;
  --stroke_color: #303030;
  --entity-header-color: #fff;
  --entity-color: #3584e4;
  --dependent-color: #2a6ab6;
  --report-color: #26a269;
  --report-font-color: #fff;
  --filter-color: #e97119;
  --filter-font-color: #fff;
  --setting-color: #708090;
  --setting-font-color: #fff;
  --copied-color: #5d36ff;
  --projection-color: #a100c2;
  --extension-color: #046c7a;
}

@media (prefers-color-scheme: dark) {
  :root {
    --font_color: #fafafa;
    --stroke_color: #fafafa;
  }
}

body {
  background-color: var(--background, #f7f7f7) !important;
  color: var(--foreground, #303030) !important;
}

.mx-sidebar-icon {
  font-size: 1.25rem;
  padding: 0.625rem 0.875rem;
  color: var(--foreground, #303030);
}

.mx-sidebar-icon:hover {
  cursor: pointer;
  background-color: var(--secondary-hover, #dcdcdc);
}

.outlineContainer {
  background: var(--background, #f7f7f7);
  box-sizing: border-box;
  top: var(--fdToolbar_Height, 2.75rem) !important;
  border: solid 0.0625rem var(--border, #dedede);
  border-top: none;
  border-right: none;
}

.editorContainer {
  height: calc(100% - var(--fdToolbar_Height, 2.75rem));
}

div.mxPopupMenu {
  background-color: var(--object-background, #fff) !important;
  font-size: var(--sapFontLargeSize, 1rem);
  line-height: var(--sapContent_LineHeight, 1.4);
  color: var(--foreground, #303030);
  font-family: var(--font-sans, "72", "72full", Arial, Helvetica);
  font-weight: 400;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  padding: 0;
  border: 0;
  border-style: none;
  border-width: 0;
  border-color: transparent;
  -webkit-box-shadow: var(--shadow-sm, 0 0 0 0.0625rem rgba(0, 0, 0, 0.1), 0 0.125rem 0.5rem 0 rgba(0, 0, 0, 0.2));
  box-shadow: var(--shadow-sm, 0 0 0 0.0625rem rgba(0, 0, 0, 0.1), 0 0.125rem 0.5rem 0 rgba(0, 0, 0, 0.2));
  border-radius: 0.188rem;
  opacity: 1 !important;
}

tr.mxPopupMenuItem {
  color: var(--foreground, #303030) !important;
}

tr.mxPopupMenuItemHover>*,
tr.mxPopupMenuItem>* {
  padding-top: 0.375rem !important;
  padding-bottom: 0.375rem !important;
}

tr.mxPopupMenuItemHover {
  color: var(--object-foreground, #303030) !important;
  background-color: var(--object-background-hover, #f2f2f2) !important;
}

td.mxPopupMenuItem {
  padding: 0.625rem 0.625rem 0.625rem 0px;
  white-space: nowrap;
  font-family: var(--font-sans, "72", "72full", Arial, Helvetica);
  font-weight: 400;
  font-size: var(--font-size, 0.875rem) !important;
}

td.mxPopupMenuIcon {
  padding-left: 0.625rem !important;
  color: var(--muted-foreground, #606060) !important;
  background-color: transparent !important;
}

td.mxPopupMenuIcon>i.sap-icon {
  color: inherit;
}

.dsm-table-icon {
  fill: var(--foreground, #303030);
  color: var(--foreground, #303030);
  margin-right: 0.125rem;
  font-family: var(--font-sans, "72", "72full", Arial, Helvetica);
  font-weight: 400;
  font-size: 0.75rem;
  width: 1rem;
  height: 1rem;
}

.dsm-table-spacer {
  display: inline-block;
  width: 1rem;
  height: 1px;
  margin-right: 0.125rem;
}

foreignObject>div {
  display: inline-flex !important;
  align-items: center;
}

foreignObject>div>div {
  display: inline-flex !important;
  align-items: center;
}

@media only screen and (min-width: 853px) {
  .edmSmallScreen {
    display: none;
  }
}

@media only screen and (max-width: 852px) {
  .edmBigScreen {
    display: none;
  }
}

